--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
 
-        <h1 id="autor">Autor: TU NOMBRE AQUÍ</h1>
+        <h1 id="autor">Autor: Juan Manuel Paterna Zarandona</h1>
 
         <!-- https://vuejs.org/v2/guide/index.html -->
         <div id="app">
@@ -27,9 +27,30 @@
                    - El término <dt> será la propiedad "prompt"
                    - La definición <dd> será la propiedad "value"
             -->
+            <div class="jumbotron">
+                <h1 id="title">Movie List</h1>
+                
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <a href="https://en.wikipedia.org/wiki/The_Lord_of_the_Rings_(film_series)" class="btn btn-primary">Ver</a>
+                    </div>
+                </div>
 
-        </div>
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <a href="https://en.wikipedia.org/wiki/The_Hunger_Games_(film_series)" class="btn btn-primary">Ver</a>
+                    </div>
+                </div>>
 
+                <div class="card" style="width: 18rem;">
+                    <div class="card-body">
+                      <a href="https://en.wikipedia.org/wiki/The_Lord_of_the_Rings_(film_series)" class="btn btn-primary">Ver</a>
+                    </div>
+                </div>
+
+                  
+            </div>
+        <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     </body>
 
 </html>
